# bgfx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  error.txt  foo.txt
.github/workflows/: rust.yml
examples/: cubes.rs  hello_winit.rs  helloworld.rs  windows.rs
src/: lib.rs  shared_lib.rs  static_lib.rs
web_example/: Cargo.toml  README.md  Web.toml
web_example/.cargo/: config
web_example/src/: main.rs  mainloop.rs
web_example/static/: index.html
