[package]
name = "bgfx-rs"
license = "BSD-2-Clause"
authors = ["Daniel Collin <daniel@collin.com>"]
categories = ["rendering::graphics-api"]
description = "Bindings for bgfx"
repository = "https://github.com/emoon/bgfx-rs"
documentation = "https://docs.rs/bgfx-rs/0.1/bgfx-rs"
version = "0.17.0"
edition = "2018"
readme = "README.md"

exclude = ["resources/"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bgfx-sys = "0.11"
bitflags = "1.2"
cfixed-string = "1.0"

[dev-dependencies]
glfw = "0.41"
raw-window-handle = "0.3"
glam = "0.15"
